// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > snapshot: no props 1`] = `
<div
  aria-disabled="false"
  class="ucl-accordion css-1czwoas"
  data-testid="ucl-accordion"
>
  <div
    aria-expanded="false"
    class="ucl-accordion__heading css-11x7r0n"
    data-testid="ucl-accordion__heading"
    role="button"
    tabindex="0"
  >
    Heading
    <svg
      class="ucl-icon css-oi0ukk"
      data-testid="ucl-icon"
      fill="none"
      height="32"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;

exports[`Accordion > snapshot: testId prop 1`] = `
<div
  aria-disabled="false"
  class="ucl-accordion css-1czwoas"
  data-testid="abc"
>
  <div
    aria-expanded="false"
    class="ucl-accordion__heading css-11x7r0n"
    data-testid="ucl-accordion__heading"
    role="button"
    tabindex="0"
  >
    Heading
    <svg
      class="ucl-icon css-oi0ukk"
      data-testid="ucl-icon"
      fill="none"
      height="32"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;
